<resources>

    <string name="placeholder">--------------------</string>
    <string name="placeholderBig">FONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFONFON</string>
    <string name="placeholder_question">Olá meu jovem amiguinho vou responder suas perguntas aqui, basta dar aquela clicadinha ;)</string>

    <string name="app_name">Parthenon</string>

    <string name="title_prog">Programação</string>
    <string name="title_profile">Perfil</string>
    <string name="title_noticias">Notícias</string>
    <string name="title_faq">Perguntas Frequentes</string>

    <string-array name="ordenacoes">
        <item>Palestra</item>
        <item>Palestrante</item>
        <item>Local</item>
        <item>Data</item>
    </string-array>

    <string name="search">Pesquisar</string>
    <string name="filterButton">Filtrar Busca</string>
    <string name="order">Ordenar Por: </string>
    <string name="orderASC">Crescente</string>
    <string name="orderDSC">Decrescente</string>
    <string name="palestras">Palestras</string>
    <string name="minicursos">Minicursos</string>
    <string name="todos">Todos</string>
    <string name="inscritos">Inscritos</string>

    <string name="img_p_placeholder">Imagem da Palestra/Minicurso</string>
    <string name="name_placeholder">Nome: </string>
    <string name="time_placeholder">Hora: </string>
    <string name="local_placeholder">Local: </string>

    <string name="profile_pic">Foto de Perfil</string>
    <string name="profile_name">Nome:</string>
    <string name="profile_insc">Nº de Inscrição:</string>
    <string name="profile_data">Meus Dados</string>
    <string name="profile_signed">Minhas Palestras / Minicursos</string>
    <string name="profile_notifications">Notificações</string>
    <string name="profile_logout">Sair</string>


</resources>
