<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <TextView
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="7dp"
        android:text="@string/title_profile"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/big_font_size"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="100dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/profile_pic"
            android:src="@mipmap/palestra_img_bg" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/profile_name"
        android:textSize="@dimen/normal_font_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/profile_insc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/profile_insc"
        android:textSize="@dimen/normal_font_size" />

    <TextView
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/profile_data"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/big_font_size" />

    <TextView
        android:id="@+id/signed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/profile_signed"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/big_font_size" />

    <TextView
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/profile_notifications"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/big_font_size" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/profile_logout"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/big_font_size" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/version" />

</LinearLayout>